-- Online Bookstore Database Schema
-- MS SQL Server Compatible

-- Create Database (run separately if needed)
-- CREATE DATABASE OnlineBookstore;
-- GO
-- USE OnlineBookstore;
-- GO

-- Drop tables if they exist (in correct order due to FK constraints)
IF OBJECT_ID('CartItems', 'U') IS NOT NULL DROP TABLE CartItems;
IF OBJECT_ID('ShoppingCarts', 'U') IS NOT NULL DROP TABLE ShoppingCarts;
IF OBJECT_ID('CustomerOrderItems', 'U') IS NOT NULL DROP TABLE CustomerOrderItems;
IF OBJECT_ID('CustomerOrders', 'U') IS NOT NULL DROP TABLE CustomerOrders;
IF OBJECT_ID('PublisherOrderItems', 'U') IS NOT NULL DROP TABLE PublisherOrderItems;
IF OBJECT_ID('PublisherOrders', 'U') IS NOT NULL DROP TABLE PublisherOrders;
IF OBJECT_ID('BookAuthors', 'U') IS NOT NULL DROP TABLE BookAuthors;
IF OBJECT_ID('Authors', 'U') IS NOT NULL DROP TABLE Authors;
IF OBJECT_ID('Books', 'U') IS NOT NULL DROP TABLE Books;
IF OBJECT_ID('Categories', 'U') IS NOT NULL DROP TABLE Categories;
IF OBJECT_ID('Publishers', 'U') IS NOT NULL DROP TABLE Publishers;
IF OBJECT_ID('RefreshTokens', 'U') IS NOT NULL DROP TABLE RefreshTokens;
IF OBJECT_ID('Users', 'U') IS NOT NULL DROP TABLE Users;
GO

-- Users Table
CREATE TABLE Users (
    UserID INT IDENTITY(1,1) PRIMARY KEY,
    Username NVARCHAR(50) NOT NULL UNIQUE,
    PasswordHash NVARCHAR(255) NOT NULL,
    Role NVARCHAR(20) NOT NULL CHECK (Role IN ('Admin', 'Customer')),
    FirstName NVARCHAR(100) NOT NULL,
    LastName NVARCHAR(100) NOT NULL,
    Email NVARCHAR(255) NOT NULL UNIQUE,
    Phone NVARCHAR(20),
    ShippingAddress NVARCHAR(500),
    CreatedAt DATETIME DEFAULT GETDATE()
);
GO

-- Refresh Tokens Table (for JWT refresh token management)
CREATE TABLE RefreshTokens (
    TokenID INT IDENTITY(1,1) PRIMARY KEY,
    UserID INT NOT NULL,
    Token NVARCHAR(500) NOT NULL,
    ExpiresAt DATETIME NOT NULL,
    CreatedAt DATETIME DEFAULT GETDATE(),
    IsRevoked BIT DEFAULT 0,
    CONSTRAINT FK_RefreshTokens_Users FOREIGN KEY (UserID) REFERENCES Users(UserID) ON DELETE CASCADE
);
GO

-- Publishers Table
CREATE TABLE Publishers (
    PublisherID INT IDENTITY(1,1) PRIMARY KEY,
    Name NVARCHAR(200) NOT NULL,
    Address NVARCHAR(500),
    Phone NVARCHAR(20)
);
GO

-- Categories Table
CREATE TABLE Categories (
    CategoryID INT IDENTITY(1,1) PRIMARY KEY,
    CategoryName NVARCHAR(50) NOT NULL UNIQUE CHECK (CategoryName IN ('Science', 'Art', 'Religion', 'History', 'Geography'))
);
GO

-- Books Table
CREATE TABLE Books (
    ISBN NVARCHAR(20) PRIMARY KEY,
    Title NVARCHAR(300) NOT NULL,
    PublisherID INT NOT NULL,
    PublicationYear INT,
    SellingPrice DECIMAL(10, 2) NOT NULL CHECK (SellingPrice >= 0),
    CategoryID INT NOT NULL,
    QuantityInStock INT NOT NULL DEFAULT 0 CHECK (QuantityInStock >= 0),
    ReorderThreshold INT NOT NULL DEFAULT 10 CHECK (ReorderThreshold >= 0),
    CONSTRAINT FK_Books_Publishers FOREIGN KEY (PublisherID) REFERENCES Publishers(PublisherID),
    CONSTRAINT FK_Books_Categories FOREIGN KEY (CategoryID) REFERENCES Categories(CategoryID)
);
GO

-- Authors Table
CREATE TABLE Authors (
    AuthorID INT IDENTITY(1,1) PRIMARY KEY,
    Name NVARCHAR(200) NOT NULL
);
GO

-- BookAuthors Junction Table (Many-to-Many)
CREATE TABLE BookAuthors (
    ISBN NVARCHAR(20) NOT NULL,
    AuthorID INT NOT NULL,
    PRIMARY KEY (ISBN, AuthorID),
    CONSTRAINT FK_BookAuthors_Books FOREIGN KEY (ISBN) REFERENCES Books(ISBN) ON DELETE CASCADE,
    CONSTRAINT FK_BookAuthors_Authors FOREIGN KEY (AuthorID) REFERENCES Authors(AuthorID) ON DELETE CASCADE
);
GO

-- Publisher Orders Table (Replenishment orders to publishers)
CREATE TABLE PublisherOrders (
    PubOrderID INT IDENTITY(1,1) PRIMARY KEY,
    PublisherID INT NOT NULL,
    OrderDate DATETIME DEFAULT GETDATE(),
    Status NVARCHAR(20) NOT NULL DEFAULT 'Pending' CHECK (Status IN ('Pending', 'Confirmed', 'Cancelled')),
    TotalAmount DECIMAL(12, 2) DEFAULT 0,
    CONSTRAINT FK_PublisherOrders_Publishers FOREIGN KEY (PublisherID) REFERENCES Publishers(PublisherID)
);
GO

-- Publisher Order Items Table
CREATE TABLE PublisherOrderItems (
    PubOrderItemID INT IDENTITY(1,1) PRIMARY KEY,
    PubOrderID INT NOT NULL,
    ISBN NVARCHAR(20) NOT NULL,
    Quantity INT NOT NULL CHECK (Quantity > 0),
    UnitPrice DECIMAL(10, 2) NOT NULL,
    CONSTRAINT FK_PublisherOrderItems_Orders FOREIGN KEY (PubOrderID) REFERENCES PublisherOrders(PubOrderID) ON DELETE CASCADE,
    CONSTRAINT FK_PublisherOrderItems_Books FOREIGN KEY (ISBN) REFERENCES Books(ISBN)
);
GO

-- Customer Orders Table
CREATE TABLE CustomerOrders (
    CustOrderID INT IDENTITY(1,1) PRIMARY KEY,
    UserID INT NOT NULL,
    OrderDate DATETIME DEFAULT GETDATE(),
    TotalAmount DECIMAL(12, 2) NOT NULL,
    CreditCardLast4 NVARCHAR(4),
    CreditCardExpiry DATE,
    Status NVARCHAR(20) DEFAULT 'Completed',
    CONSTRAINT FK_CustomerOrders_Users FOREIGN KEY (UserID) REFERENCES Users(UserID)
);
GO

-- Customer Order Items Table
CREATE TABLE CustomerOrderItems (
    CustOrderItemID INT IDENTITY(1,1) PRIMARY KEY,
    CustOrderID INT NOT NULL,
    ISBN NVARCHAR(20) NOT NULL,
    Quantity INT NOT NULL CHECK (Quantity > 0),
    UnitPrice DECIMAL(10, 2) NOT NULL,
    CONSTRAINT FK_CustomerOrderItems_Orders FOREIGN KEY (CustOrderID) REFERENCES CustomerOrders(CustOrderID) ON DELETE CASCADE,
    CONSTRAINT FK_CustomerOrderItems_Books FOREIGN KEY (ISBN) REFERENCES Books(ISBN)
);
GO

-- Shopping Carts Table
CREATE TABLE ShoppingCarts (
    CartID INT IDENTITY(1,1) PRIMARY KEY,
    UserID INT NOT NULL UNIQUE,
    CreatedAt DATETIME DEFAULT GETDATE(),
    CONSTRAINT FK_ShoppingCarts_Users FOREIGN KEY (UserID) REFERENCES Users(UserID) ON DELETE CASCADE
);
GO

-- Cart Items Table
CREATE TABLE CartItems (
    CartItemID INT IDENTITY(1,1) PRIMARY KEY,
    CartID INT NOT NULL,
    ISBN NVARCHAR(20) NOT NULL,
    Quantity INT NOT NULL DEFAULT 1 CHECK (Quantity > 0),
    CONSTRAINT FK_CartItems_Carts FOREIGN KEY (CartID) REFERENCES ShoppingCarts(CartID) ON DELETE CASCADE,
    CONSTRAINT FK_CartItems_Books FOREIGN KEY (ISBN) REFERENCES Books(ISBN),
    CONSTRAINT UQ_CartItems_Cart_Book UNIQUE (CartID, ISBN)
);
GO

-- Create Indexes for performance
CREATE INDEX IX_Books_Title ON Books(Title);
CREATE INDEX IX_BookAuthors_AuthorID ON BookAuthors(AuthorID);
CREATE INDEX IX_CustomerOrders_OrderDate ON CustomerOrders(OrderDate);
CREATE INDEX IX_CustomerOrderItems_ISBN ON CustomerOrderItems(ISBN);
CREATE INDEX IX_Users_Email ON Users(Email);
CREATE INDEX IX_Users_Username ON Users(Username);
GO

PRINT 'Schema created successfully!';
GO
